# glSkeletalAnimation

./: .gitignore  .gitmodules  CMakeLists.txt
glm/glm/gtx/: norm.hpp
shaders/bonesInfluence/: fragmentShader.glsl  vertexShader.glsl
shaders/circle/: fragmentShader.glsl  vertexShader.glsl
shaders/diffuseMapping/: fragmentShader.glsl  vertexShader.glsl
shaders/light/: fragmentShader.glsl  vertexShader.glsl
shaders/normalMapping/: fragmentShader.glsl
shaders/pbr/: fragmentShader.glsl  vertexShader.glsl
shaders/toon/: fragmentShader.glsl  vertexShader.glsl
src/: main.cpp
src/Animator/: Animation.cpp  Animation.h  AnimationMixer.cpp  AnimationMixer.h  Animator.h  Bone.h
src/Camera/: Camera.cpp  Camera.h
src/Light/: DirectionalLight.h  PointLight.h
src/Model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h
src/Render/: ShaderProgram.cpp  ShaderProgram.h
src/Utils/: Logger.cpp  Logger.h
src/Utils/AssimpHelper/: assimp_glm_helpers.h
src/glad/include/glad/: glad.h
src/glad/src/: glad.c
